--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
@@ -28,8 +28,8 @@ services:
       - "yes"
       - --appendfsync
       - "everysec"
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     volumes:
       - redis_data:/data
     networks:
@@ -41,8 +41,8 @@ services:
     container_name: minio
     env_file: .env
     command: server /data
-    ports:
-      - "9000:9000"
+    expose:
+      - "9000"
     volumes:
       - minio_data:/data
     networks:
@@ -55,8 +55,8 @@ services:
     env_file: .env
     volumes:
       - ./backend:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     depends_on:
       - db
       - redis
