--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - "yes"
       - --appendfsync
       - "everysec"
+#    ports:
+#      - "6379:6379"
     expose:
       - "6379"
     volumes:
