486 add static files in backend and footer for downloading

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,7 +45,7 @@ http {
             proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
-        # —————————— Проксирование API → Flask-бэкенд ——————————
+        # Проксирование API → Flask-бэкенд
         location /api/ {
             proxy_pass         http://backend:8000;
             proxy_http_version 1.1;
@@ -55,7 +55,17 @@ http {
             proxy_set_header   Connection      "";
         }
 
-        # —————————— Проксирование /images/ → MinIO/S3 ——————————
+        # Проксирование загрузок PDF → Flask
+        location /download/ {
+            proxy_pass         http://backend:8000;
+            proxy_http_version 1.1;
+            proxy_set_header   Host              $host;
+            proxy_set_header   X-Real-IP         $remote_addr;
+            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+
+        # Проксирование /images/ → MinIO/S3
         location /images/ {
             proxy_pass         http://minio:9000/images/;
             proxy_http_version 1.1;
@@ -64,12 +74,7 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # —————————— Всё остальное (SPA) → Frontend ——————————
-        #
-        # Любой URL, кроме /api/ и /images/, отправляем на ваш
-        # frontend-контейнер (порт 80). Если frontend отдаёт 404,
-        # перехватываем и возвращаем index.html (SPA fallback).
-        #
+        # Всё остальное (SPA) → Frontend
         location / {
             proxy_pass         http://frontend:80;
             proxy_http_version 1.1;
@@ -77,21 +82,13 @@ http {
             proxy_set_header   X-Real-IP       $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   Connection      "";
-
-            # Очищаем заголовки If-Modified, чтобы фронтенд НЕ отвечал 304
             proxy_set_header   If-Modified-Since "";
             proxy_set_header   If-None-Match       "";
-
             proxy_intercept_errors on;
             error_page 404 =200 /index.html;
         }
 
-        # —————————— Обработка «/index.html» после internal-redirect ——————————
-        #
-        # Когда выше срабатывает error_page 404 =200 /index.html,
-        # nginx делает внутренний запрос “/index.html” сюда и отдаёт
-        # именно файл index.html из frontend.
-        #
+        # Обработка «/index.html» после internal-redirect
         location = /index.html {
             proxy_pass         http://frontend:80/index.html;
             proxy_http_version 1.1;
@@ -99,8 +96,6 @@ http {
             proxy_set_header   X-Real-IP       $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   Connection      "";
-
-            # И здесь тоже сбрасываем условные GET-заголовки
             proxy_set_header   If-Modified-Since "";
             proxy_set_header   If-None-Match       "";
         }
