--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,103 +1,109 @@
+worker_processes auto;
+
 events {
     worker_connections 1024;
 }
 
 http {
-    recursive_error_pages on;
+    include mime.types;
+    default_type application/octet-stream;
 
-    include       mime.types;
-    default_type  application/octet-stream;
+    access_log off;
+    error_log /var/log/nginx/error.log error;
 
-    access_log    off;
-    error_log     /var/log/nginx/error.log  error;
-
-    # Редирект HTTP → HTTPS
+    # Перенаправление HTTP → HTTPS
     server {
-        listen       80;
-        server_name  yandashop.ru;
-        return       301 https://$host$request_uri;
+        listen 80;
+        server_name yandashop.ru;
+        return 301 https://$host$request_uri;
     }
 
-    # HTTPS-сервер с поддержкой HTTP/2
+    # HTTPS-конфигурация с поддержкой HTTP/2
     server {
         listen 443 ssl http2;
-        server_name  yandashop.ru;
-
+        server_name yandashop.ru;
         client_max_body_size 100M;
 
-        ssl_certificate     /etc/letsencrypt/live/yandashop.ru/fullchain.pem;
+        # Сертификаты Let's Encrypt
+        ssl_certificate /etc/letsencrypt/live/yandashop.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/yandashop.ru/privkey.pem;
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'HIGH:!aNULL:!MD5';
+
+        # Защита от DoS атак
+        limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=30r/s;
+        limit_req zone=req_limit_per_ip burst=100 nodelay;
 
         # Блокируем доступ к /webmail/data
         location ~ ^/webmail/data/ {
             return 404;
         }
 
-        # Web-mail
+        # Прокси для webmail
         location ^~ /webmail/ {
-            proxy_pass       http://webmail:80/;
+            proxy_pass http://webmail:80/;
             proxy_http_version 1.1;
-            proxy_set_header   Host              $host;
-            proxy_set_header   X-Real-IP         $remote_addr;
-            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Проксирование API → Flask-бэкенд
+        # Прокси для API
         location /api/ {
-            proxy_pass         http://backend:8000;
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
-            proxy_set_header   Host            $host;
-            proxy_set_header   X-Real-IP       $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   Connection      "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Connection "";
         }
 
-        # Проксирование загрузок PDF → Flask
+        # Прокси для загрузок PDF
         location /download/ {
-            proxy_pass         http://backend:8000;
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
-            proxy_set_header   Host              $host;
-            proxy_set_header   X-Real-IP         $remote_addr;
-            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Проксирование /images/ → MinIO/S3
+
+        # Прокси для изображений из MinIO
         location /images/ {
-            proxy_pass         http://minio:9000/images/;
+            proxy_pass http://minio:9000/images/;
             proxy_http_version 1.1;
-            proxy_set_header   Host            $host;
-            proxy_set_header   X-Real-IP       $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Всё остальное (SPA) → Frontend
+        # Прокси для фронтенда
         location / {
-            proxy_pass         http://frontend:80;
+            proxy_pass http://frontend:80;
             proxy_http_version 1.1;
-            proxy_set_header   Host            $host;
-            proxy_set_header   X-Real-IP       $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   Connection      "";
-            proxy_set_header   If-Modified-Since "";
-            proxy_set_header   If-None-Match       "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Connection "";
             proxy_intercept_errors on;
             error_page 404 =200 /index.html;
         }
 
         # Обработка «/index.html» после internal-redirect
         location = /index.html {
-            proxy_pass         http://frontend:80/index.html;
+            proxy_pass http://frontend:80/index.html;
             proxy_http_version 1.1;
-            proxy_set_header   Host            $host;
-            proxy_set_header   X-Real-IP       $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   Connection      "";
-            proxy_set_header   If-Modified-Since "";
-            proxy_set_header   If-None-Match       "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Connection "";
+        }
+
+        # Кеширование статики
+        location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|eot)$ {
+            expires 30d;
+            add_header Cache-Control "public";
         }
     }
 }
