--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,6 @@ services:
       - "yes"
       - --appendfsync
       - "everysec"
-#    ports:
-#      - "6379:6379"
     expose:
       - "6379"
     volumes:
@@ -65,6 +63,7 @@ services:
       - db
       - redis
       - minio
+      - mail
     networks:
       - app-network
     restart: always
