--- a/frontend/nginx-spa.conf
+++ b/frontend/nginx-spa.conf
@@ -2,17 +2,21 @@ server {
     listen       80;
     server_name  _;
 
-    access_log  off;
-
     root   /usr/share/nginx/html;
     index  index.html;
 
-    # Если файл или папка существуют — отдать их, иначе вернуть index.html
+    access_log off;
+    error_log /var/log/nginx/error.log error;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # (необязательно) отдавать favicon только из корня
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
     location = /favicon.ico {
         try_files /favicon.ico =204;
     }
