--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,11 +5,23 @@ events {
 }
 
 http {
-    include mime.types;
-    default_type application/octet-stream;
+    sendfile             on;
+    tcp_nopush           on;
+    keepalive_timeout    65;
+    include              mime.types;
+    default_type         application/octet-stream;
 
     access_log off;
     error_log /var/log/nginx/error.log error;
+
+    # Ограничение на запросы для защиты от DoS атак
+    limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=30r/s;
+    limit_req zone=req_limit_per_ip burst=100 nodelay;
+
+    map $http_upgrade $connection_upgrade {
+        default   Upgrade;
+        ""        close;
+    }
 
     # Перенаправление HTTP → HTTPS
     server {
@@ -20,19 +32,43 @@ http {
 
     # HTTPS-конфигурация с поддержкой HTTP/2
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
         server_name yandashop.ru;
         client_max_body_size 100M;
 
         # Сертификаты Let's Encrypt
-        ssl_certificate /etc/letsencrypt/live/yandashop.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/yandashop.ru/privkey.pem;
+        ssl_certificate           /etc/letsencrypt/live/justicemafia.online/fullchain.pem;
+        ssl_certificate_key       /etc/letsencrypt/live/justicemafia.online/privkey.pem;
+        ssl_trusted_certificate   /etc/letsencrypt/live/justicemafia.online/chain.pem;
+        ssl_session_cache         shared:SSL:10m;
+        ssl_session_timeout       1h;
+        ssl_stapling              off;
+        ssl_stapling_verify       off;
+        resolver                  1.1.1.1 8.8.8.8 valid=300s;
+        resolver_timeout          5s;
+
+        # Протоколы
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'HIGH:!aNULL:!MD5';
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305';
+        ssl_prefer_server_ciphers on;
+        ssl_dhparam /etc/ssl/certs/dhparam.pem;
+
+        # Заголовки безопасности
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ws: wss: data:; media-src 'self' data: blob:; img-src 'self' data: blob:;" always;
 
         # Защита от DoS атак
-        limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=30r/s;
         limit_req zone=req_limit_per_ip burst=100 nodelay;
+
+        # Защита от доступа к системным файлам
+        location ~* \.(env|git|svn|log|sh|bash|htpasswd)$ {
+            deny all;
+            return 404;
+        }
 
         # Блокируем доступ к /webmail/data
         location ~ ^/webmail/data/ {
@@ -56,6 +92,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Connection "";
         }
 
@@ -66,6 +103,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
 
@@ -76,6 +114,9 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
         }
 
         # Прокси для фронтенда
@@ -85,25 +126,19 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Connection "";
             proxy_intercept_errors on;
             error_page 404 =200 /index.html;
         }
 
-        # Обработка «/index.html» после internal-redirect
-        location = /index.html {
-            proxy_pass http://frontend:80/index.html;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Connection "";
-        }
-
         # Кеширование статики
         location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|eot)$ {
+            proxy_pass http://frontend_up;
             expires 30d;
             add_header Cache-Control "public";
+            proxy_buffering off;
+            proxy_request_buffering off;
         }
     }
 }
