--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,9 +14,7 @@ http {
     access_log off;
     error_log /var/log/nginx/error.log error;
 
-    # Ограничение на запросы для защиты от DoS атак
     limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=30r/s;
-    limit_req zone=req_limit_per_ip burst=100 nodelay;
 
     map $http_upgrade $connection_upgrade {
         default   Upgrade;
@@ -26,6 +24,7 @@ http {
     # Перенаправление HTTP → HTTPS
     server {
         listen 80;
+        listen [::]:80;
         server_name yandashop.ru;
         return 301 https://$host$request_uri;
     }
@@ -38,7 +37,7 @@ http {
         server_name yandashop.ru;
         client_max_body_size 100M;
 
-        # Сертификаты Let's Encrypt
+        # TLS
         ssl_certificate           /etc/letsencrypt/live/justicemafia.online/fullchain.pem;
         ssl_certificate_key       /etc/letsencrypt/live/justicemafia.online/privkey.pem;
         ssl_trusted_certificate   /etc/letsencrypt/live/justicemafia.online/chain.pem;
@@ -49,96 +48,89 @@ http {
         resolver                  1.1.1.1 8.8.8.8 valid=300s;
         resolver_timeout          5s;
 
-        # Протоколы
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305';
         ssl_prefer_server_ciphers on;
         ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
-        # Заголовки безопасности
+        # Security headers
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ws: wss: data:; media-src 'self' data: blob:; img-src 'self' data: blob:;" always;
+        add_header Content-Security-Policy "default-src * data: blob:; script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; style-src * 'unsafe-inline' data: blob:; img-src * data: blob:; font-src * data:; connect-src * ws: wss: data: blob:; media-src * data: blob:; frame-src *;" always;
 
-        # Защита от DoS атак
-        limit_req zone=req_limit_per_ip burst=100 nodelay;
+        # Прокси для API
+        location /api/ {
+            limit_req zone=req_limit_per_ip burst=100 nodelay;
+            proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_set_header Connection         "";
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+        }
 
-        # Защита от доступа к системным файлам
+        # Блокируем доступ к /webmail/data
+        location ^~ /webmail/data/ {
+            return 404;
+        }
+
+        # Webmail
+        location ^~ /webmail/ {
+            proxy_pass http://webmail:80/;
+            proxy_http_version 1.1;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+        }
+
+        # Защита от доступа к системным файлам/секретам
         location ~* \.(env|git|svn|log|sh|bash|htpasswd)$ {
             deny all;
             return 404;
         }
 
-        # Блокируем доступ к /webmail/data
-        location ~ ^/webmail/data/ {
-            return 404;
-        }
-
-        # Прокси для webmail
-        location ^~ /webmail/ {
-            proxy_pass http://webmail:80/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Прокси для API
-        location /api/ {
-            proxy_pass http://backend:8000;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-        }
-
-        # Прокси для загрузок PDF
+        # Загрузки
         location /download/ {
             proxy_pass http://backend:8000;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-
-        # Прокси для изображений из MinIO
-        location /images/ {
-            proxy_pass http://minio:9000/images/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
             proxy_read_timeout 120s;
             proxy_send_timeout 120s;
         }
 
-        # Прокси для фронтенда
+        # MinIO
+        location /images/ {
+            proxy_pass http://minio:9000/images/;
+            proxy_http_version 1.1;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
+        }
+
+        # Frontend SPA (Vue history mode)
         location / {
             proxy_pass http://frontend:80;
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            proxy_intercept_errors on;
-            error_page 404 =200 /index.html;
-        }
-
-        # Кеширование статики
-        location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf|eot)$ {
-            proxy_pass http://frontend_up;
-            expires 30d;
-            add_header Cache-Control "public";
-            proxy_buffering off;
-            proxy_request_buffering off;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_set_header Connection         "";
+            proxy_read_timeout 120s;
+            proxy_send_timeout 120s;
         }
     }
 }
