--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,9 +38,9 @@ http {
         client_max_body_size 100M;
 
         # TLS
-        ssl_certificate           /etc/letsencrypt/live/justicemafia.online/fullchain.pem;
-        ssl_certificate_key       /etc/letsencrypt/live/justicemafia.online/privkey.pem;
-        ssl_trusted_certificate   /etc/letsencrypt/live/justicemafia.online/chain.pem;
+        ssl_certificate           /etc/letsencrypt/live/yandashop.ru/fullchain.pem;
+        ssl_certificate_key       /etc/letsencrypt/live/yandashop.ru/privkey.pem;
+        ssl_trusted_certificate   /etc/letsencrypt/live/yandashop.ru/chain.pem;
         ssl_session_cache         shared:SSL:10m;
         ssl_session_timeout       1h;
         ssl_stapling              off;
