--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-#    ports:
-#      - "5432:5432"
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
+#    expose:
+#      - "5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
@@ -55,8 +55,6 @@ services:
     build: ./backend
     container_name: backend
     env_file: .env
-    volumes:
-      - ./backend:/app
     expose:
       - "8000"
     depends_on:
