--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "5432:5432"
 #    expose:
 #      - "5432"
+#    expose:
+#      - "5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
