--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,10 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    ports:
-      - "5432:5432"
-#    expose:
-#      - "5432"
-#    expose:
-#      - "5432"
+#    ports:
+#      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     networks:
